--- a/Assignment 08.ipynb
+++ b/Assignment 08.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 8(pressure and weight BGD).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeqoYN+QzSf7NmSQYZDPVL"
+      "authorship_tag": "ABX9TyNOfNPUXxUg7NObUsLarg2M"
     },
     "kernelspec": {
       "name": "python3",
@@ -20,12 +20,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "vxOog2g9hTW9",
-        "outputId": "0b9875e7-6f3e-4170-985b-2c1d67c95ac8"
+        "id": "5v9UsXnqtsTV",
+        "outputId": "a34cdeda-9f72-4bd8-fc3d-84b10c7f949a"
       },
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
         "d = pd.read_csv('/content/pressure and weight.csv')\n",
         "#print(d)\n",
         "x=np.array(d.iloc[:,0:1])\n",
@@ -38,20 +39,16 @@
         "for i in range(len(x)):\n",
         "  x[i] = (x[i]-x.min())/(x.max()-x.min())\n",
         "  y[i] = (y[i]-y.min())/(y.max()-y.min())\n",
-        "#considering 90% oftraining data (i.e,first 3 values)\n",
-        "length= (90*len(x))//100\n",
-        "print(length)\n",
-        "train_x = x[:length]\n",
-        "train_y = y[:length]\n",
-        "#considering 10% of testing data (i.e,last value)\n",
         "\n",
-        "test_x = x[length:]\n",
-        "test_y = y[length:]\n",
+        "#spliting training and testing data\n",
+        "train_x,test_x = train_test_split(x,test_size =0.1)\n",
+        "train_y,test_y= train_test_split(y,test_size =0.1)\n",
+        "\n",
         "print(test_y)\n",
         "m=1;\n",
         "c=1;\n",
-        "eta=0.01;\n",
-        "epochs=10000;\n",
+        "eta=0.1;\n",
+        "epochs=100000;\n",
         "for i in range(epochs):\n",
         "  tm = 0;\n",
         "  tc=0;\n",
@@ -67,13 +64,15 @@
         "  m = m + deltam\n",
         "  c = c + deltac\n",
         "\n",
-        "print(m,c)\n",
+        "#printing final m and c values  \n",
+        "print(\"Final m value is: \",m,\"Final c value is: \",c)\n",
         "\n",
+        "# calculating Mean square error, root mean square error and mean absolute error for training data set\n",
         "q = 0\n",
         "q1=0\n",
         "for i in range(len(train_x)):\n",
         "  v=m*train_x[i]+c\n",
-        "  z = int(train_y[i])-int(v)\n",
+        "  z = train_y[i]-v\n",
         "  q += z**2\n",
         "  q1+=abs(z)\n",
         "\n",
@@ -85,12 +84,12 @@
         "\n",
         "\n",
         "\n",
-        "# calculating Mean square error for training data set\n",
+        "# calculating Mean square error, root mean square error and mean absolute error for testing data set\n",
         "w =0\n",
         "w1=0\n",
         "for i in range(len(test_x)):\n",
         "  v=m*train_x[i]+c\n",
-        "  z = int(train_y[i])-int(v)\n",
+        "  z = train_y[i]-v\n",
         "  w += z**2\n",
         "  w1 +=abs(z)\n",
         "\n",
@@ -112,24 +111,23 @@
         "y_value = m*x_value+c\n",
         "y_value = y_value*(y_max-y_min)+y_min\n",
         "\n",
-        "print(\"y value when x value is\",x_value,\": \",y_value)"
+        "print(\"Weight of liquid nitrogen based on pressure is:\",y_value)"
       ],
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "27\n",
-            "[[0.97697936]\n",
-            " [0.96604455]\n",
-            " [1.        ]]\n",
-            "[-0.00094827] [0.95858594]\n",
-            "mean square error for tarining data: 0.1111111111111111\n",
-            "Root mean square error for training data: 0.3333333333333333\n",
-            "mean absolute error for trained dataset: 0.1111111111111111\n",
-            "mean square error for test data: 0.0\n",
-            "Root mean square error for testing data: 0.0\n",
-            "mean absolute error for testing data: 0.0\n",
+            "[[0.99722994]\n",
+            " [0.97736303]\n",
+            " [0.94436678]]\n",
+            "Final m value is:  [-0.03786677] Final c value is:  [0.98991128]\n",
+            "mean square error for tarining data: [0.00362923]\n",
+            "Root mean square error for training data: [0.06024306]\n",
+            "mean absolute error for trained dataset: [0.03234838]\n",
+            "mean square error for test data: [0.01188883]\n",
+            "Root mean square error for testing data: [0.1090359]\n",
+            "mean absolute error for testing data: [0.08113768]\n",
             "[[577.8       ]\n",
             " [578.12382655]\n",
             " [576.30841528]\n",
@@ -161,7 +159,7 @@
             " [572.76305829]\n",
             " [578.6       ]]\n",
             "Enter value of x:75.1\n",
-            "y value when x value is 0.22318339100346007 :  [571.44454259]\n"
+            "Weight of liquid nitrogen based on pressure is: [575.41298114]\n"
           ],
           "name": "stdout"
         }
